docs: prevent copy button from overlapping screenshot overlay (#4632)

--- a/site/src/components/CopyPageButton.module.css
+++ b/site/src/components/CopyPageButton.module.css
@@ -2,7 +2,6 @@
   position: absolute;
   top: 16px;
   right: 16px;
-  z-index: 100;
 }
 
 .copyButton {
